<resources>
<!--    <string name="autologin">bob</string>-->
<!--    <string name="autopassword">lol</string>-->
    <string name="autologin">a</string>
    <string name="autopassword">a</string>
    <string name="app_name">enguerrand_robin_benjamin</string>
    <string name="response">Response…</string>
    <string name="_0">0</string>
    <string name="number_of_question">Number of question</string>
    <string name="empty">Empty</string>
    <string name="title">Title</string>
    <string name="remove">Remove</string>
    <string name="question_name">Question name</string>
    <string name="sign_up">Sign up</string>
    <string name="name">name</string>
    <string name="password">password</string>
    <string name="admin">Admin</string>
    <string name="welcome_to_quizz_app">Welcome to Quizz App</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="list_of_all_available_quizz">List of all available quizz</string>
    <string name="create_a_new_quizz">Create a new quizz</string>
    <string name="submit">Submit</string>
    <string name="delete_this_quizz">Delete this Quizz</string>
    <string name="password_hint">******</string>
    <string name="list_all_user">List all users</string>
    <string name="delete_this_user">Delete this user</string>
    <string name="quizz_score">%d / %d</string>
    <string name="quizz_name">Quizz name</string>
    <string name="score">Score</string>
    <string name="n_a">N/A</string>
    <string name="delete_self_warning">You can\'t delete yourself</string>
    <string name="answer">Answer</string>
    <string name="next">Next</string>
    <string name="previous">previous</string>
    <string name="question">Question</string>
</resources>
