<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EnguerrandRobinBenjamin">

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/center"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="76dp"
            android:text="@string/welcome_to_quizz_app"
            android:textSize="30sp" />

    <android.support.constraint.ConstraintLayout
            android:id="@+id/center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            >

        <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="64dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorBlue"
                android:textColor="#FFFFFF"
                android:layout_marginEnd="64dp"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:onClick="login"/>

        <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginButton"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="64dp"
                android:backgroundTint="@color/colorGreen"
                android:textColor="#FFFFFF"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="64dp"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginButton"
                android:onClick="register"/>

    </android.support.constraint.ConstraintLayout>
</RelativeLayout>